--- a/web/public/stylesheets/style.css
+++ b/web/public/stylesheets/style.css
@@ -44,6 +44,7 @@
             flex-direction: row;
             margin-top: 10px;
             margin-bottom: 10px;
+            /* visibility: hidden; */
         }
         
         .film-table-container {
