--- a/web/public/stylesheets/style.css
+++ b/web/public/stylesheets/style.css
@@ -71,6 +71,17 @@
             position: relative;
             display: inline-table;
         }
+
+        .horizontal-nav {
+            background-color: #4973d9;
+            background: #10316b;
+            background: linear-gradient(top, #10316b 0%, #4973d9 100%);
+            background: -moz-linear-gradient(top, #10316b 0%, #4973d9 100%);
+            background: -webkit-linear-gradient(top, #10316b 0%, #4973d9 100%);
+            box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.15);
+            width: 100%;
+            color: white;
+        }
         
         ul.horizontal-nav:after {
             content: "";
@@ -129,9 +140,9 @@
         
         #header {
             background-color: #10316b;
-            width: 100%;
+            /* width: 100%;
             height: 50px;
-            text-align: center;
+            text-align: center; */
         }
         
         #sidebar-left {
@@ -141,7 +152,7 @@
         
         #main {
             margin: 0;
-            display: table;
+            /* display: table; */
             margin-left: auto;
             margin-right: auto
         }
